# Mnemozine

./: .dockerignore  .env.example  .gitignore  INTERFACES.md  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
deploy/: Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.ingest.yml  docker-compose.yml  litellm.config.yaml
docs/: API_CONTRACT.md  WEBUI_PRD.md
mnemozine/: __init__.py  app.py  config.py  interfaces.py  llm.py  services.py
mnemozine/activity/: __init__.py  log.py  models.py
mnemozine/crossref/: __init__.py  engine.py  scoring.py
mnemozine/evals/: __init__.py  _offline_store.py  bootstrap.py  cli.py  distractors.py  goldset.py  harness_adapters.py  knn_bench.py  metrics.py  runner.py
mnemozine/extract/: __init__.py  extractor.py  raw_tier.py
mnemozine/ingestion/: __init__.py  loop.py
mnemozine/maintenance/: __init__.py  audit.py  category_merge.py  co_mention.py  consolidation.py  decay.py  decision.py  entity_dedup.py  entity_resolution.py  memory_dedup.py  mentions.py  migrate_index.py  provenance_rescope.py  reclassify.py  relation_norm.py  runner.py
mnemozine/migrations/: __init__.py  baseline.py  entity_name_key.py  report.py  runner.py
mnemozine/retrieval/: __init__.py  budget.py  context.py  injection.py  retriever.py  server.py
mnemozine/schema/: __init__.py  events.py  models.py
mnemozine/storage/: __init__.py  backend.py  cosine.py  embeddings.py  graphiti_client.py
mnemozine/web/: __init__.py  app.py  auth.py  deps.py  schemas.py
scripts/: fake_llm.py  seed_demo.py
tests/: conftest.py  test_contracts_smoke.py  test_run_all.py  test_services.py
tests/activity/: test_emit_instrumentation.py
tests/crossref/: test_engine.py  test_scoring.py
tests/deploy/: test_docker_compose.py  test_dockerfile.py  test_helm_chart.py
tests/evals/: test_bootstrap.py  test_cli.py  test_distractors.py  test_goldset.py  test_harness_adapters.py  test_knn_bench.py  test_metric_calculations.py  test_metric_runners.py  test_runner.py
tests/extract/: test_classify.py  test_extractor.py  test_prompts.py
tests/ingestion/: test_claude_code_chunker.py  test_claude_code_hooks.py  test_claude_code_parser.py  test_claude_code_scope.py  test_claude_code_source.py  test_claude_code_tool_stripping.py  test_gateway_callback.py  test_hermes_adapter.py  test_loop_wiring.py
tests/maintenance/: test_audit.py  test_category_merge.py  test_co_mention.py  test_consolidation.py  test_decay.py  test_entity_dedup.py  test_entity_resolution.py  test_memory_dedup.py  test_mentions.py  test_migrate_cmd.py  test_migrate_index.py  test_provenance_rescope.py  test_reclassify.py  test_relation_norm.py  test_runner.py  test_write_decision.py
tests/migrations/: test_baseline.py  test_runner.py
tests/retrieval/: test_budget.py  test_context.py  test_injection.py  test_retriever.py  test_server.py
tests/storage/: fake_falkor.py  test_backend_contract.py  test_backend_live_falkordb.py  test_cosine.py  (+4 more)
web/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  screenshot.mjs  screenshot_recall.mjs  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+141 files in other folders)
