# Mnemozine — Unified Conversational Memory Layer
# PEP 621 project metadata; built with hatchling.
[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mnemozine"
version = "0.0.1"
description = "Self-hosted unified conversational memory layer: temporal knowledge graph over agent conversations, served via MCP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mnemozine" }]
keywords = ["memory", "knowledge-graph", "mcp", "graphiti", "falkordb", "llm"]

# Runtime dependencies.
# Graphiti is pinned to an exact released version per PRD §5.5 / OQ4
# (0.29.2 ships a `falkordb` extra, confirming FalkorDB backend support).
# Everything else is lower-bounded; upgrade deliberately.
dependencies = [
    "graphiti-core[falkordb]==0.29.2",
    "falkordb>=1.6.1",
    "litellm>=1.88.1",
    "mcp>=1.27.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.14",
    "ollama>=0.4",
    "httpx>=0.27",
    "watchfiles>=0.24",
    "apscheduler>=3.10,<4",
    "typer>=0.26",
    # WebUI operator console (WEBUI PRD): FastAPI app + uvicorn server.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

# Console entrypoints. The four service scripts target the wired composition
# root in mnemozine.app; the four hook scripts target the Claude Code hook
# main()s (each reads the hook JSON from stdin, writes hookSpecificOutput JSON to
# stdout; register them in Claude Code's settings.json hooks config).
[project.scripts]
mnemozine-mcp = "mnemozine.app:run_mcp"
mnemozine-ingest = "mnemozine.app:run_ingest"
mnemozine-maintenance = "mnemozine.app:run_maintenance"
mnemozine-eval = "mnemozine.app:run_eval"
mnemozine-web = "mnemozine.app:run_web"
mnemozine-hook-session-start = "mnemozine.ingestion.claude_code.hooks.session_start:main"
mnemozine-hook-user-prompt-submit = "mnemozine.ingestion.claude_code.hooks.user_prompt_submit:main"
mnemozine-hook-stop = "mnemozine.ingestion.claude_code.hooks.stop:main"
mnemozine-hook-pre-compact = "mnemozine.ingestion.claude_code.hooks.pre_compact:main"

[tool.hatch.build.targets.wheel]
packages = ["mnemozine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    # Opt-in live integration tests that need a real FalkorDB on the configured
    # URL (default redis://localhost:6379). Auto-skipped when the server is
    # unreachable, so the default offline suite stays green with no infra.
    "live_falkordb: requires a reachable FalkorDB (skipped when absent)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# UP042: we deliberately use `class X(str, Enum)` rather than `StrEnum` for
# stable pydantic JSON serialization and broad 3.11+ behavior parity.
ignore = ["UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true
